<resources>
    <string name="app_name">WeatherReminder</string>
    <string name="title_activity_useralert">User alert</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="thunderstorm">Thunder</string>
    <string name="mist">Mist</string>
    <string name="saveBtn">Save changes</string>
</resources>
