<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:padding="8dp"
    android:weightSum="8"
    tools:context=".UserAlertActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose weather condition for which you would want to be notified:"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="32dp"></TextView>
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:paddingBottom="16dp"
        android:layout_marginTop="16dp"
        android:paddingTop="16dp"
        android:columnOrderPreserved="false"
        android:rowCount="2">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/rain"></ImageView>

                <CheckBox
                    android:id="@+id/checkbox_rain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rain"
                    android:textSize="20sp"></CheckBox>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/storm"></ImageView>

                <CheckBox
                    android:id="@+id/checkbox_thunder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thunderstorm"
                    android:textSize="20sp"></CheckBox>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/snow"></ImageView>

                <CheckBox
                    android:id="@+id/checkbox_snow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snow"
                    android:textSize="20sp"></CheckBox>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/mist"></ImageView>

                <CheckBox
                    android:id="@+id/checkbox_mist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mist"
                    android:textSize="20sp"></CheckBox>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </GridLayout>
<Button
    android:layout_width="wrap_content"
    android:layout_gravity="center_horizontal|top"
    android:textColor="@color/cardview_light_background"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:layout_margin="8dp"
    android:text="@string/saveBtn"
    android:background="@color/colorPrimary"/>
</LinearLayout>